# RTBP

./: CMakeLists.txt  HillsRegions.py  README  main.c  myHeader.h
Plotting/: HillsRegions.py  plotAss11.py  plotAss12.py  plotAss13.py
src/: IOmodule.c  equPoints.c  hillsRegions.c  orbitIntegration.c  poincare.c  poincareSections.c  rtbp.c  rtbpEqs.c  rtbp_variationals.c  stability.c  symmetricPeriodicOrbits.c  taylor.h
